--- a/app/views/planets/index.html.erb
+++ b/app/views/planets/index.html.erb
@@ -3,13 +3,18 @@
 
 <h2>The current time is: <%= @current_time.inspect %> </h2>
 
-<% @planets.each do |planet| %>
-  Planet name: <%= planet.name %> <br/>
-  Description: <%= planet.description %> <br/>
-  Current sign: <%= planet.current_sign %> <br/>
-  Changes sign at: <%= planet.changes_sign_at %> <br/>
-  SWE ID: <%= planet.swe_id %> <br/>
-  <br />
-<% end %>
-
+<div class="row">
+  <% @planets.each do |planet| %>
+    <div class="planet-box col-10 col-sm-4">
+      Planet name: <%= planet.name %> <br/>
+      Description: <%= planet.description %> <br/>
+      Current sign: <%= planet.current_sign %> <br/>
+      Changes sign at: <%= planet.changes_sign_at %> <br/>
+      SWE ID: <%= planet.swe_id %> <br/>
+      <br />
+    </div>
+    <br />
+    <br />
+  <% end %>
+</div>
 <br />
