styled planets into bootstrap cards w collapse

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,6 +1,14 @@
 @import "bootstrap";
 
 .planet-box {
-  background-color: grey;
-  color: white;
+  margin: auto 0;
+}
+
+.planet-card {
+  width: 100%;
+  border-radius: 0;
+}
+
+h5 {
+  text-align: center;
 }
