--- a/app/views/planets/index.html.erb
+++ b/app/views/planets/index.html.erb
@@ -13,7 +13,7 @@
             <div class="card-header" id="heading<%= planet.name %>">
               <h5 class="mb-0">
                 <button class="btn btn-link" data-toggle="collapse" data-target="#collapse-<%= planet.name %>" aria-expanded="true" aria-controls="collapse-<%= planet.name %>" style="margin: auto;">
-                  <%= planet.name %> in <%= planet.current_sign %>
+                  <%= planet.name %> is in <%= planet.current_sign %>
                 </button>
               </h5>
             </div>
