--- a/app/views/planets/index.html.erb
+++ b/app/views/planets/index.html.erb
@@ -9,7 +9,7 @@
       <div class="row">
       <% @planets.each do |planet| %>
         
-        <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-8 col-xs-5 col-sm-8 col-md-5 col-lg-4 offset-2 offset-md-1">
           <div class="card">
             <img class="card-img-top" src="http://via.placeholder.com/350x350" alt="Card image cap">
             <div class="card-header" id="heading<%= planet.name %>">
