made time display local time

--- a/app/views/planets/index.html.erb
+++ b/app/views/planets/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Here are the planets and their current signs.</h1>
 <br />
 
-<h2>The current time is: <%= @current_time.inspect %> </h2>
+<h2>The current time is: <%= @current_time.strftime("%l:%M %p on %B %e, %Y") %> </h2>
 
 <div class="container">
 
