--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,15 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand navbar-light bg-light">
+    <nav class="navbar sticky-top navbar-expand navbar-light bg-light">
 
       <%= link_to "Haengsung", root_path, class: "navbar-brand" %>
       
-      <span class="navbar-text">
-        At-a-glance planetary ephermerides.
-      </span>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          UTC time is: <%= Time.new.strftime("%l:%M %p on %B %e, %Y") %>
+        </li>
+      </ul>
 
     </nav>
     <%= yield %>
