--- a/app/views/planets/index.html.erb
+++ b/app/views/planets/index.html.erb
@@ -13,11 +13,11 @@
         
         <div class="col-8 col-xs-8 col-sm-8 col-md-6 col-lg-4 offset-2 offset-md-3 offset-lg-1">
           <div class="card">
-            <img class="card-img-top" src="http://via.placeholder.com/350x350" alt="Card image cap">
+            
             <div class="card-header" id="heading<%= planet.name %>">
               <h5 class="mb-0">
                 <button class="btn btn-link" data-toggle="collapse" data-target="#collapse-<%= planet.name %>" aria-expanded="true" aria-controls="collapse-<%= planet.name %>" style="margin: auto;">
-                  <%= planet.name %> is in <%= planet.current_sign %>
+                  <%= planet.name %> is in <%= planet.current_degree %>&deg; <%= planet.current_sign %>
                 </button>
               </h5>
             </div>
@@ -25,10 +25,11 @@
             <div id="collapse-<%= planet.name %>" class="collapse" aria-labelledby="heading<%= planet.name %>" data-parent="#accordion">
               <div class="card-body">
                 This planet represents: <%= planet.description %>
+                <br />
+                This planet enters <%= planet.next_sign %> on <%= planet.changes_sign_at %>.
               </div>
             </div>
           </div>
-          <br />
           <br />
 
         </div>
