--- a/app/views/planets/index.html.erb
+++ b/app/views/planets/index.html.erb
@@ -32,11 +32,14 @@
                   Upcoming astrological events:
                   <ul>
                     <li>
-                      <%= planet.name %> enters <%= planet.next_sign %> on <%= planet.changes_sign_at %>.
+                      <%= planet.name %> enters <%= planet.next_sign %> on <%= planet.changes_sign_at.strftime("%B %e, %Y") %>.
                     </li>
-                    <% if planet.name != "Sun" %>
+                    <% if planet.name != "Sun" && planet.name != "Moon" %>
                       <li>
                         <%= planet.name %> is <% if planet.is_retrograde %> in retrograde. <% else %> direct. <% end %>
+                      </li>
+                      <li>
+                        <%= planet.name %> will go <% if planet.is_retrograde %> direct <% else %> retrograde <% end %> on <%= planet.next_station.strftime("%B %e, %Y") %>.
                       </li>
                     <% end %>
                   </ul>
