--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -12,6 +12,7 @@
 .planet-card {
   width: 100%;
   border-radius: 0;
+  border: 0;
 }
 
 h5 {
@@ -33,4 +34,28 @@ h5 {
 
 .card-container {
   margin-bottom: 0;
+  padding: 0;
+  box-shadow: 0;
+}
+
+.card {
+  border-radius: 0;
+  border: 0;
+  box-shadow: 0;
+}
+
+.nav-item {
+  color: white;
+}
+
+.footer {
+  height: 56px;
+  padding: 14px;
+  background-color: black;
+  color: white;
+}
+
+.footer a {
+  color: white;
+  text-decoration: none;
 }
