--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,17 +10,27 @@
   </head>
 
   <body>
-    <nav class="navbar sticky-top navbar-expand navbar-light bg-light">
 
+    <nav class="navbar sticky-top navbar-expand navbar-dark bg-dark">
       <%= link_to "Haengsung", root_path, class: "navbar-brand" %>
-      
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           UTC time is: <%= Time.new.strftime("%l:%M %p on %B %e, %Y") %>
         </li>
       </ul>
-
     </nav>
+
     <%= yield %>
+
+    <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h5 class="text-center"><%= link_to 'About', '#', class: "text-center" %></h5>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
